<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="seedcommando.com.yashaswi.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/yashaswi"
                    android:gravity="center"
                    android:id="@+id/imageView" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_floatusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white_color"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                   >


                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Username"
                        android:inputType="textNoSuggestions"
                        android:textColor="@color/white_color"
                        android:textColorHint="@color/floatloginlabels"
                        android:id="@+id/editText_username"
                        android:padding="14dp"
                        android:drawableLeft="@drawable/icon_user"
                        android:drawablePadding="10dp"
                        android:fontFamily="@string/fontFamily__roboto_light"
                        android:paddingTop="4dp"
                        android:nextFocusUp="@id/editText_username"
                        android:nextFocusLeft="@id/editText_username"

                        android:layout_marginTop="4dp"/>
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_floatpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white_color"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                  >


                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColor="@color/white_color"
                        android:textColorHint="@color/floatloginlabels"
                        android:id="@+id/editText_password"
                        android:drawableLeft="@drawable/icon_password"
                        android:drawablePadding="10dp"
                        android:padding="14dp"
                        android:fontFamily="@string/fontFamily__roboto_light"
                        android:paddingTop="4dp"
                        android:nextFocusUp="@id/editText_password"
                        android:nextFocusLeft="@id/editText_password"
                        android:layout_marginTop="4dp"/>
                </android.support.design.widget.TextInputLayout>


                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_floatpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="password"
                    android:backgroundTint="#ffffff"
                    android:textColorHint="@color/white_color"
                    android:fontFamily="@string/fontFamily__roboto_light"
                    android:textColor="@color/white_color"
                    android:drawableLeft="@drawable/icon_password"
                    android:id="@+id/editText_password"
                    android:drawablePadding="10dp"
                    android:paddingBottom="16dp"
                    android:layout_weight="1"
                    android:textCursorDrawable="@drawable/color_cursor"/>
        </android.support.design.widget.TextInputLayout>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="20dp">

                <CheckBox
                    android:text="REMEMBER ME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white_color"
                    android:textColor="@color/white_color"
                    android:fontFamily="@string/fontFamily__roboto_light"
                    android:theme="@style/WhiteCheck"
                    android:id="@+id/checkBox_remember_me"
                    android:padding="12dp"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Button
                    android:text="LOGIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_login"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:textColor="@color/white_color"
                    android:onClick="onLogin"
                    android:textSize="18sp"
                    android:background="@drawable/roundbutton"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register New User"
                android:textSize="20sp"
                android:id="@+id/move_Reg_page"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#009900"
                android:gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot password"
                android:textSize="20sp"
                android:id="@+id/forgotpwd"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:textColor="#009900"
                android:gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Copyright © 2021. emSphere Technologies Pvt. Ltd. All rights reserved"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="bottom"
                android:gravity="left"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
