...
            android:layout_marginBottom="22dp"
            android:background="#dedcdc"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:maxLength="100"

            android:id="@+id/remark_txt_reason"
           android:padding="6dp"
            />

        </LinearLayout>


...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
...
