...

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_att_in"
                android:textSize="26sp"
                android:id="@+id/in_button"
                android:fontFamily="@string/fontFamily__roboto_condensed"
                android:background="@drawable/camera_btn_in"
                android:textColor="@color/textColorPrimary"
                android:onClick="in_picture"/>

            <Button
...
